clipping issues solved by replacing getBBox() with getBoundingClientRect()

--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ html, body { margin:0; padding:0; overflow:hidden; width:100%; height:100%; }
 h1 {position:absolute;}
 #breadcrumbs {position:absolute; font-size:16px;}
 #display_svg {display:block; margin:0 auto; width:90%; height:100%;}
-#layout_svg {position:absolute; overflow:hidden; left:-20000px;}
+#layout_svg {position:absolute; overflow:hidden; top:0; left:20000px;}
 
 .edge path {stroke-opacity:0;}
 .node {opacity:0;}
